@@ -7,8 +7,8 @@ import unicam.cs.ids.models.Comune;
 import unicam.cs.ids.models.punti.*;
 import unicam.cs.ids.models.servizi.ServizioOSM;
 import unicam.cs.ids.models.stato.Stato;
+import unicam.cs.ids.repositorys.*;
 
-import java.io.IOException;
 import java.util.*;
 
 /**
@@ -22,12 +22,26 @@ public class GestoreComunale {
     private final IAnalizzatorePuntoFisico analizzatorePuntoFisico;
     private final GestoreRichieste gestoreRichieste;
 
-    public GestoreComunale(Comune comune) {
+    private ContenutiRepository contenutiRepository;
+
+    private ComuniRepository comuniRepository;
+
+    private ContestRepository contestRepository;
+
+    private PuntiFisiciRepository puntiFisiciRepository;
+
+    public GestoreComunale(ComuniRepository comuniRepository, Comune comune, ContestRepository contestRepository,
+                           PuntiFisiciRepository puntiFisiciRepository, ContenutiRepository contenutiRepository
+                            ,RichiesteRepository richiesteRepository){
+        this.contestRepository = contestRepository;
+        this.contenutiRepository = contenutiRepository;
+        this.puntiFisiciRepository = puntiFisiciRepository;
+        this.comuniRepository = comuniRepository;
         this.comune = comune;
         this.contest = new HashSet<>();
         this.puntiFisici = new HashSet<>();
         this.analizzatorePuntoFisico = new ProxyAnalizzatorePuntoFisico(new AnalizzatorePuntoFisico(new ServizioOSM()));
-        this.gestoreRichieste = new GestoreRichieste();
+        this.gestoreRichieste = new GestoreRichieste(richiesteRepository,comune.id());
     }
 
     /**
@@ -35,7 +49,7 @@ public class GestoreComunale {
      * @param puntoFisico il punto fisico da valutare.
      * @return true se il punto fisico è contenuto nel comune, false altrimenti.
      */
-    public boolean valutaPuntoFisico(PuntoFisico puntoFisico) throws JSONException, IOException {
+    public boolean valutaPuntoFisico(PuntoFisico puntoFisico) {
         return this.analizzatorePuntoFisico.controllaPuntoFisico(puntoFisico, comune);
     }
 
@@ -61,7 +75,11 @@ public class GestoreComunale {
      * @param contest il contest da aggiungere
      */
     public boolean aggiungiContest(Contest contest) {
-        return this.contest.add(contest);
+        if(this.contestRepository.findById(contest.getId()).isEmpty()) {
+            this.contestRepository.save(contest);
+            return true;
+        }
+        return false;
     }
 
     /**
@@ -70,10 +88,18 @@ public class GestoreComunale {
      * @return le iscrizioni vincenti del contest.
      */
     public List<Iscrizione> getIscrizioniVincenti(Contest contest) {
-        return contest.getIscrizioni().entrySet().stream()
-                .filter(entry -> Objects.equals(entry.getValue(), contest.getIscrizioni().values().stream().max(Integer::compareTo).get()))
-                .map(Map.Entry::getKey)
-                .toList();
+
+        // TODO: implementare
+        return null;
+
+   // int max = contest.getIscrizioni().stream()
+   //            .mapToInt(Iscrizione::getPunti)
+   //            .max()
+   //             .orElse(0);
+    //     return contest.getIscrizioni().stream()
+    //            .filter(iscrizione -> iscrizione.getPunti() == max)
+    //            .collect(Collectors.toList());
+
     }
 
     /**
@@ -83,7 +109,10 @@ public class GestoreComunale {
      */
     public boolean chiudiContest(Contest contest) {
         if (contest.getStato() == Stato.APERTO) {
-            contest.setStato(Stato.CHIUSO);
+            this.contestRepository.findById(contest.getId()).ifPresent(contest1 -> {
+                contest1.setStato(Stato.CHIUSO);
+                this.contestRepository.save(contest1);
+            });
             return true;
         }
         return false;
@@ -95,15 +124,10 @@ public class GestoreComunale {
      * @return i dettagli dei contenuti del punto fisico
      */
     public Set<Contenuto> getDettagliContenuti(PuntoFisico puntoFisico) {
-        if(puntoFisico.equals(this.comune.puntoComune()))
-            return this.comune.puntoComune().getContenuti();
-        if (this.puntiFisici.isEmpty())
-            return new HashSet<>();
-        return new HashSet<>(this.puntiFisici.stream()
-                .filter(pf -> pf.equals(puntoFisico))
-                .findFirst()
-                .orElseThrow()
-                .getContenuti());
+        PuntoFisico punto = this.puntiFisiciRepository.getReferenceById(puntoFisico.getCoordinate());
+        if(punto != null) {
+            return punto.getContenuti();
+        } else return new HashSet<>();
     }
 
     /**
@@ -112,21 +136,19 @@ public class GestoreComunale {
      * @param puntoFisico il punto fisico a cui aggiungere il contenuto
      */
     public boolean aggiungiContenuto(Contenuto contenuto, PuntoFisico puntoFisico) {
-        if(puntoFisico.equals(this.comune.puntoComune())) return this.comune.puntoComune().getContenuti().add(contenuto);
-        if(this.puntiFisici.contains(puntoFisico)) {
-            return this.puntiFisici.stream()
-                    .filter(pf -> pf.equals(puntoFisico))
-                    .findFirst()
-                    .get() // E' presente.
-                    .getContenuti()
-                    .add(contenuto);
-        } else { // Il punto non è presente.
-            if(analizzatorePuntoFisico.controllaPuntoFisico(puntoFisico, comune)) {
-                puntoFisico.getContenuti().add(contenuto);
-                return puntiFisici.add(puntoFisico);
-            }
-        }
-        return false;
+        Contenuto con = this.contenutiRepository.save(contenuto);
+        PuntoFisico pf ;
+        puntoFisico.setIdc(this.comune.id());
+        if(!this.puntiFisiciRepository.existsById(puntoFisico.getCoordinate())) {//Todo: elimina commento finiti i test
+           // if(analizzatorePuntoFisico.controllaPuntoFisico(puntoFisico, comune)) {
+            pf = this.puntiFisiciRepository.save(puntoFisico);
+        //    }
+        } else pf = this.puntiFisiciRepository.getReferenceById(puntoFisico.getCoordinate());
+
+
+        pf.getContenuti().add(con);
+        pf = this.puntiFisiciRepository.save(pf);
+        return true;
     }
 
     /**
@@ -136,13 +158,7 @@ public class GestoreComunale {
      * @return true se il contenuto è stato eliminato, false altrimenti.
      */
     public boolean eliminaContenuto(Contenuto contenuto, PuntoFisico puntoFisico) {
-        if (puntoFisico.getContenuti().contains(contenuto)) {
-            puntoFisico.getContenuti().remove(contenuto);
-            if (puntoFisico.getContenuti().isEmpty()) {
-                return puntiFisici.remove(puntoFisico);
-            }
-        }
-        return false;
+        return eliminaContenuto(contenuto);
     }
 
     /**
@@ -151,31 +167,11 @@ public class GestoreComunale {
      * @return true se il contenuto è stato eliminato, false altrimenti.
      */
     public boolean eliminaContenuto(Contenuto contenuto) {
-        for (PuntoFisico puntoFisico : puntiFisici) {
-            if (puntoFisico.getContenuti().contains(contenuto)) {
-                puntoFisico.getContenuti().remove(contenuto);
-                if (puntoFisico.getContenuti().isEmpty()) {
-                    return puntiFisici.remove(puntoFisico);
-                }
-            }
-        }
-        return false;
+        Contenuto con = this.contenutiRepository.getReferenceById(contenuto.getId());
+        con.setStato(Stato.ELIMINATO);
+        this.contenutiRepository.save(con);
+        return true;
     }
-
-
-
-    /**
-     * Questo metodo ritorna i dettagli di un punto fisico, nelle quali potremmo trovare
-     * le coordinate del punto, il numero dei contenuti.
-     * @return
-     */
-    public JSONArray getDettagliPuntiFisici() {
-        // TODO: implementare
-        return null;
-    }
-
-
-
 
     @Override
     public String toString() {
@@ -200,9 +196,7 @@ public class GestoreComunale {
      * @return il contest.
      */
     public Contest getContestById(String id) {
-        return contest.stream()
-                .filter(contest -> contest.getId().equals(id)).findFirst()
-                .orElse(null);
+        return this.contestRepository.getReferenceById(id);
     }
 
     /**
@@ -211,10 +205,7 @@ public class GestoreComunale {
      * @return il contenuto.
      */
     public Contenuto getContenutoById(String id) {
-        return puntiFisici.stream()
-                .flatMap(puntoFisico -> puntoFisico.getContenuti().stream())
-                .filter(contenuto -> contenuto.getId().equals(id)).findFirst()
-                .orElse(null);
+        return this.contenutiRepository.getReferenceById(id);
     }
 
     /**
@@ -226,8 +217,6 @@ public class GestoreComunale {
     }
 
     public Set<PuntoFisico> getPuntiFisici() {
-        HashSet<PuntoFisico> set = new HashSet<>(puntiFisici);
-        set.add(comune.puntoComune());
-        return set;
+        return new HashSet<>(this.puntiFisiciRepository.findAll().stream().filter(puntoFisico -> this.comune.id().equals(puntoFisico.getIdc())).toList());
     }
 }
